# FreelanceShield

./: .gitignore  AGENTS.md  DEPLOYMENT_GUIDE.md  FreelanceShield_Build_Issues_Documentation.md  FreelanceShield_BusinessPlan.md  FreelanceShield_Whitepaper.md  README.md  SYSTEM_ARCHITECTURE.md  WSL_DEPLOYMENT_GUIDE.md  analyze_contracts.sh  anchor-install-fix.sh  anchor-workspace-fix.sh  debug-waitlist-api.js  deploy-to-devnet.md  enhanced_analysis.sh  local-api-server.js  package.json  simple_enhanced_analysis.sh  test-cjs-waitlist-api.js  test-deployed-api.js  test-direct-api.js  test-env.js  test-local-api.js  test-local-waitlist-api.js  test-local-waitlist-api.mjs  test-local-waitlist.js  test-supabase-connection.js  test-vercel-waitlist-api.js  test-waitlist-api.js  test-waitlist.html  ubuntu-deploy-guide.md  vercel.json  waitlist-table-schema.sql  windsurf.pem
FreelanceShield-Core/: Anchor.toml  Cargo.toml  README.md
FreelanceShield-Core/programs/core/: Cargo.toml
FreelanceShield-Core/programs/core/src/: cpi_validation.rs  lib.rs
FreelanceShield-Core/programs/reputation-program/: Cargo.toml
FreelanceShield-Core/programs/reputation-program/src/: errors.rs  lib.rs
FreelanceShield-Core/programs/risk-pool-program/: Cargo.toml
FreelanceShield-Core/programs/risk-pool-program/src/: domain_integration.rs  lib.rs  premium_calculation.rs  reputation_integration.rs  utils.rs
backend-python/: README.md  (+2 more)
freelance-safeguard-contracts/: ## Programming Stack:  .gitignore  ARCHITECTURE.md  Anchor.toml  Anchor.toml.backup  Cargo.toml  Cargo.toml.backup  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  FileScopeMCP-tree.json  README-INTEGRATION.md  README.md  Untitled-2  build-core-only.sh  build-core.sh  build-standalone-core.sh  build.rs  core_log.txt  dependency_log.txt  deploy-core.sh  deploy-keypair.json  deploy-windows.ps1  deploy.sh  docker-compose.integration.yml  docker-compose.yml  docker-entrypoint.sh  downgrade_deps.sh  fix-all-dependencies.sh  fix-dependencies.sh  fix-lockfile-issues.sh  fix_solana_spl_versions.sh  fix_workspace_deps.sh  package.json  run-deploy.bat  setup-wsl.sh  test-deployment.ts  test-package.json  tsconfig.json  update_rust.sh  (+5 more)
freelance-safeguard-contracts/.cargo/: config.toml
freelance-safeguard-contracts/app/: README.md  package.json
freelance-safeguard-contracts/app/src/: App.tsx
freelance-safeguard-contracts/app/src/components/: Dashboard.tsx  WalletConnect.tsx
freelance-safeguard-contracts/app/src/styles/: main.css
freelance-safeguard-contracts/app/src/utils/: contract-integration.ts  idl-loader.ts  program-integration.ts  wallet-adapter.ts
freelance-safeguard-contracts/backup-20250419040038/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040038/programs/claims-processor/: # Update solana-tokio patch below when u.txt
freelance-safeguard-contracts/backup-20250419040038/programs/dao-governance/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040038/programs/enhanced-claims/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040038/programs/enhanced-cover/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040038/programs/escrow-program/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040038/programs/freelance-insurance/: Cargo.toml  Cargo.toml.backup.20250322215919
freelance-safeguard-contracts/backup-20250419040038/programs/policy-nft/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040038/programs/simple-core/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040038/programs/staking-program/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040135/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040135/programs/claims-processor/: Cargo.toml.backup.20250322224525
freelance-safeguard-contracts/backup-20250419040135/programs/core/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040135/programs/dao-governance/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040135/programs/escrow-program/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040135/programs/risk-pool-program/: Cargo.toml.backup.20250322215919  Cargo.toml.backup.20250322224421
freelance-safeguard-contracts/backup-20250419040135/programs/staking-program/: Cargo.toml.backup.20250322224527
freelance-safeguard-contracts/backup-20250419040314/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040314/programs/enhanced-claims/: Cargo.toml
freelance-safeguard-contracts/backup-20250419040427/: Cargo.toml
freelance-safeguard-contracts/docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md
freelance-safeguard-contracts/programs/claims-processor/: Cargo.toml
freelance-safeguard-contracts/programs/core/: Cargo.toml  README.md  SmartContractsStructure.md
freelance-safeguard-contracts/programs/dao-governance/: Cargo.toml
freelance-safeguard-contracts/programs/enhanced-claims/: Cargo.toml
freelance-safeguard-contracts/programs/enhanced-cover/: Cargo.toml
freelance-safeguard-contracts/programs/enhanced-risk-pool/: Cargo.toml
freelance-safeguard-contracts/programs/escrow-program/: Cargo.toml  Cargo.toml.backup.20250322224526
freelance-safeguard-contracts/programs/freelance-insurance/: Cargo.toml
freelance-safeguard-contracts/programs/insurance-program/: Cargo.toml
freelance-safeguard-contracts/programs/policy-nft/: Cargo.toml
freelance-safeguard-contracts/programs/reputation-program/: Cargo.toml  Cargo.toml.backup.20250322215919
freelance-safeguard-contracts/programs/risk-pool-program/: Cargo.toml
freelance-safeguard-contracts/programs/staking-program/: Cargo.toml  Cargo.toml.backup.20250322215919
freelance-safeguard-contracts/scripts/: build-programs.bat  copy-idls.js  deploy-to-devnet.js  fix-cargo-files.bat  setup-frontend-integration.sh  setup-solana-env.bat  sync-idl-to-frontend.sh  verify-dependencies.bat  verify-dependencies.sh
freelance-safeguard-contracts/tests/: bayesian_model_test.ts  core_critical_paths.ts  devnet-test.ts  integration-test.ts
freelance-safeguard/programs/freelance-insurance/: Cargo.toml
(+633 files in other folders)
