[workspace]
members = [
    "programs/core",
    "programs/risk-pool-program",
    "programs/reputation-program"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 0

[profile.test]
opt-level = 3

[workspace.metadata.solana]
sdk-version = "1.17.0"

[workspace.dependencies]
anchor-lang = "=0.31.0"
anchor-spl = { version = "=0.31.0", features = ["token", "associated_token"], default-features = false }
solana-program = "=1.17.0"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "=1.1.3"
thiserror = "=1.0.66"
zeroize = "=1.3.0"
proc-macro2 = "=1.0.74"
quote = "=1.0.35"
syn = { version = "=2.0.46", features = ["full", "extra-traits"] }
subtle = "=2.4.1"
borsh = "=0.10.3"
borsh-derive = "=0.10.3"
mpl-token-metadata = { version = "=1.11.1", features = ["no-entrypoint"] }
unicode-ident = "=1.0.8"
rustc_version = "=0.4.0"

# Patch section to force specific versions
[patch.crates-io]
solana-program = { git = "https://github.com/solana-labs/solana.git", tag = "v1.17.0" }
