[workspace]
members = [
    "programs/claims-processor",
    "programs/escrow-program",
    "programs/insurance-program",
    "programs/reputation-program",
    "programs/risk-pool-program",
    "programs/freelance-insurance",
    "programs/core",
    "programs/enhanced-cover",
    "programs/enhanced-risk-pool",
    "programs/policy-nft",
    "programs/dao-governance"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 0

[profile.test]
opt-level = 3

[workspace.metadata.solana]
sdk-version = "2.1.0"

[workspace.dependencies]
anchor-lang = "=0.31.0"
anchor-spl = { version = "=0.31.0", features = ["token"], default-features = false }
borsh = "=0.10.3"
borsh-derive = "=0.10.3"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=1.1.3", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "=1.11.1", features = ["no-entrypoint"] }
thiserror = "=1.0.69"
zeroize = "=1.3.0"
proc-macro2 = "=1.0.89"
quote = "=1.0.35"
syn = { version = "=1.0.109", features = ["full", "extra-traits"] }
unicode-ident = "=1.0.8"
rustc_version = "=0.4.0"
solana-program = "=2.1.0"

[patch.crates-io]
# Fix borsh serialization issues for mpl-token-metadata
borsh = { git = "https://github.com/near/borsh-rs", tag = "v0.10.3" }
borsh-derive = { git = "https://github.com/near/borsh-rs", tag = "v0.10.3" }
# Override syn version to ensure compatibility
syn = { git = "https://github.com/dtolnay/syn.git", tag = "1.0.109" }
# Override proc-macro2 to match solana-sdk-macro requirements
proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2.git", tag = "1.0.89" }
# Override quote to match thiserror-impl requirements
quote = { git = "https://github.com/dtolnay/quote.git", tag = "1.0.35" }
# Override solana-program version for all dependencies
solana-program = { git = "https://github.com/solana-labs/solana.git", rev = "v1.16.21" }
