[workspace]
members = [
    "programs/risk-pool-program",
    "programs/claims-processor",
    "programs/escrow-program",
    "programs/insurance-program",
    "programs/reputation-program",
    "programs/freelance-insurance",
    "programs/core",
    "programs/enhanced-cover",
    "programs/enhanced-risk-pool",
    "programs/policy-nft",
    "programs/dao-governance",
    "programs/staking-program",
    "programs/enhanced-claims"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 0

[profile.test]
opt-level = 3

[workspace.metadata.solana]
sdk-version = "1.17.0"

[workspace.dependencies]
anchor-lang = "=0.31.0"
anchor-spl = { version = "=0.31.0", features = ["token", "associated_token"], default-features = false }
solana-program = "=1.17.0"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "=1.1.3"
thiserror = "=1.0.65"
zeroize = "=1.3.0"
proc-macro2 = "=1.0.66"
quote = "=1.0.35"  # Upgraded to meet thiserror-impl's minimum requirement
syn = { version = "=2.0.29", features = ["full", "extra-traits"] }
subtle = "=2.4.1"
borsh = "=0.10.3"
borsh-derive = "=0.10.3"
mpl-token-metadata = { version = "=1.11.1", features = ["no-entrypoint"] }
unicode-ident = "=1.0.8"
rustc_version = "=0.4.0"

# Patch section to force specific versions
[patch.crates-io]
solana-program = { git = "https://github.com/solana-labs/solana.git", tag = "v1.17.0" }
quote = { git = "https://github.com/dtolnay/quote.git", tag = "1.0.35" }
thiserror-impl = { git = "https://github.com/dtolnay/thiserror.git", tag = "1.0.65" }
thiserror = { git = "https://github.com/dtolnay/thiserror.git", tag = "1.0.65" }
proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2.git", tag = "1.0.66" }
