[workspace]
members = [
    "programs/*",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
# Core dependencies with specific versions
anchor-lang = "=0.31.0"
anchor-spl = { version = "=0.31.0", features = ["token", "associated_token"], default-features = false }
solana-program = "=1.17.0"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "=2.2.0"

# Explicitly specify transitive dependencies with compatible versions
thiserror = "=1.0.50"
zeroize = "=1.3.0"  # Downgraded to be compatible with curve25519-dalek
proc-macro2 = "=1.0.67"
quote = "=1.0.33"
syn = { version = "=2.0.37", features = ["full", "extra-traits"] }
subtle = "=2.5.0"
borsh = "=0.10.3"
borsh-derive = "=0.10.3"
solana-sdk = "=1.17.0"
solana-client = "=1.17.0"
solana-zk-token-sdk = "=1.17.0"
solana-logger = "=1.17.0"
solana-program-test = "=1.17.0"
solana-account-decoder = "=1.17.0"
solana-banks-client = "=1.17.0"
solana-banks-server = "=1.17.0"
solana-cli-config = "=1.17.0"
solana-cli-output = "=1.17.0"
solana-vote-program = "=1.17.0"
solana-stake-program = "=1.17.0"
solana-transaction-status = "=1.17.0"
solana-version = "=1.17.0"
solana-address-lookup-table-program = "=1.17.0"
bytemuck = "=1.14.0"
bytemuck_derive = "=1.5.0"
arrayref = "=0.3.7"
num-derive = "=0.4.1"
num-traits = "=0.2.17"
num_enum = "=0.7.1"
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
serde_bytes = "=0.11.12"
toml = "=0.8.8"
sha2 = "=0.10.8"
sha3 = "=0.10.8"
base64 = "=0.21.5"
rand = "=0.8.5"
getrandom = { version = "=0.2.11", features = ["js"] }
bs58 = "=0.5.0"
bincode = "=1.3.3"
curve25519-dalek = "=3.2.1"  # Using a version compatible with zeroize 1.3.0
lazy_static = "=1.4.0"
log = "=0.4.20"
regex = "=1.10.2"
rustversion = "=1.0.14"
static_assertions = "=1.1.0"
tokio = { version = "=1.34.0", features = ["full"] }
wasm-bindgen = "=0.2.89"
ed25519-dalek = "=1.0.1"  # Using a version compatible with curve25519-dalek 3.2.1
chrono = { version = "=0.4.31", default-features = false, features = ["alloc"] }
