[package]
name = "freelance-shield-core"
version = "0.1.0"
description = "Core insurance functionality for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "freelance_shield_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token"] }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
