[package]
name = "risk-pool-program"
version = "0.1.0"
description = "Risk pool management for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_pool_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token"] }
spl-token = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
