[package]
name = "claims-processor"
version = "0.1.0"
description = "Claims processing program for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claims_processor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
# Removed solana-program as it's included in anchor-lang
