[package]
name = "claims-processor"
version = "0.1.0"
description = "Claims processing for the FreelanceShield protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claims_processor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["token", "token_2022"] }
borsh = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
unicode-ident = { workspace = true }

[dev-dependencies]
solana-sdk = "=1.16.13"
