[package]
name = "claims-processor"
version = "0.1.0"
description = "FreelanceShield smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }
borsh = { workspace = true }
# All Solana and SPL dependencies now use workspace versions
