[package]
name = "dao-governance"
version = "0.1.0"
description = "DAO governance program for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
