[package]
name = "enhanced-claims"
version = "0.1.0"
description = "Enhanced Claims processor for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "enhanced_claims"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }