[package]
name = "enhanced-claims"
version = "0.1.0"
description = "FreelanceShield smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
borsh = { workspace = true }

# Already removed direct solana-program dependency; let anchor-lang manage it
# Removed direct solana-program dependency for Anchor compatibility
