[package]
name = "enhanced-risk-pool"
version = "0.1.0"
description = "Enhanced Risk Pool for FreelanceShield based on Nexus Mutual patterns"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "enhanced_risk_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
zeroize = "1.3.0"
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0", default-features = false }
spl-token = "4.0.0"
spl-associated-token-account = "1.1.3"
thiserror = "1.0.40"
