[package]
name = "escrow-program"
version = "0.1.0"
description = "Escrow program for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
solana-zk-token-sdk = { workspace = true }
spl-token-2022 = { workspace = true }
