[package]
name = "escrow-program"
version = "0.1.0"
description = "Escrow program for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0", default-features = false }
thiserror = "1.0.40"
zeroize = "1.3.0"
spl-token = "4.0.0"
