[package]
name = "freelance-insurance"
version = "0.1.0"
description = "Insurance Program for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "freelance_insurance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-zk-token-sdk = { workspace = true }
spl-token-2022 = { workspace = true }
