[package]
name = "policy-nft"
version = "0.1.0"
description = "NFT-based policy tokenization for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "policy_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
solana-program = { workspace = true }
