[package]
name = "risk-pool-program"
version = "0.1.0"
description = "Risk pool program for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_pool_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
zeroize = "1.3.0"
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0", default-features = false }
spl-token = "4.0.0"
thiserror = "1.0.40"
