[package]
name = "risk-pool-program"
version = "0.1.0"
description = "Risk pool program for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_pool_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["token"], default-features = false }
spl-token = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
zeroize = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
solana-program = { workspace = true }
