[package]
name = "freelance-insurance"
version = "0.1.0"
description = "Solana-based insurance program for freelancers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "freelance_insurance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.16"
