[package]
name = "enhanced-cover"
version = "0.1.0"
description = "Enhanced Cover program for FreelanceShield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "enhanced_cover"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, default-features = false }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
